--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%229mDl617T%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%224zsPCzKf%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "c_user",
@@ -86,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWWVIemJ_DLkUCxjcuxP87gNrPxv5zXUNy8_Hg.BnU2fO..AAA.0.0.Bnulxu.AWUuz_s2CDc",
+        "value": "0Ce5OZhMDKmMWCT3i.AWXo9iQDmTUVil5PSMnvAHEbDcPYlBcZYILQ-Q.BnU2fO..AAA.0.0.BnumVs.AWWp7kWc7vU",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "xs",
-        "value": "1%3AuP6ZAMyTQhM6fw%3A2%3A1740266607%3A-1%3A5903",
+        "value": "5%3A2HuBF2vJmV14CA%3A2%3A1740268908%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100739868%3BT%3A29004443",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2748%3Btimestamp%3A1740266610",
+        "value": "v2%3Bclient_version%3A2748%3Btimestamp%3A1740268911",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-22T23:23:46.890Z",
-        "lastAccessed": "2025-02-22T23:23:46.890Z"
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101027380%3BT%3A29004481",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-23T00:01:57.529Z",
+        "lastAccessed": "2025-02-23T00:01:57.529Z"
     }
 ]
