--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22KJY0Mawx%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22xA1cJF5a%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "vpd",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "datr",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "wd",
@@ -68,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "c_user",
@@ -77,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWVCFg7y8Pf1OlyBUx9Lm98km6M94ulvhE7dkA.BnU2fO..AAA.0.0.BnunB0.AWWZw63pduk",
+        "value": "0Ce5OZhMDKmMWCT3i.AWUAa1zA3HkFIjRTibMnUxf0Ed_tPpATUmy1og.BnU2fO..AAA.0.0.BnvYUN.AWXnd58rxY4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "xs",
-        "value": "45%3A0-qgCqWOah4_BA%3A2%3A1740271732%3A-1%3A5903",
+        "value": "29%3AWehreP-KJvoo9w%3A2%3A1740473613%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2749%3Btimestamp%3A1740344668",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     },
     {
         "key": "fbl_st",
-        "value": "101233856%3BT%3A29006547",
+        "value": "100738861%3BT%3A29007893",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-24T10:27:53.367Z",
-        "lastAccessed": "2025-02-24T10:27:53.367Z"
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2749%3Btimestamp%3A1740473616",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-25T08:53:51.243Z",
+        "lastAccessed": "2025-02-25T08:53:51.243Z"
     }
 ]
