--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22rFKpyQu5%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261568751681209%22%3A%224jnfV6Ri%22%2C%22100049235086690%22%3A%22hWNQ5rDb%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     },
     {
         "key": "sb",
@@ -14,17 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B733x384x2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     },
     {
         "key": "datr",
@@ -32,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     },
     {
         "key": "ps_n",
@@ -50,44 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x733",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100049235086690",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
-    },
-    {
-        "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWVMPw92YYobI-OKxAdQ2QI_Vb5P-NBI1nJBOA.BnU2fO..AAA.0.0.BnvdW_.AWU8hy_KTtg",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
-    },
-    {
-        "key": "xs",
-        "value": "16%3AMmvOy5q2caCzdA%3A2%3A1740494272%3A-1%3A5903",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     },
     {
         "key": "locale",
@@ -95,25 +50,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x733",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100049235086690",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
+    },
+    {
+        "key": "fr",
+        "value": "0Ce5OZhMDKmMWCT3i.AWVDPop1eZ_0LqNe02NqmYXUETk_1L0MIInuNg.BnU2fO..AAA.0.0.BnwMtw.AWUEnK1nbc8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
+    },
+    {
+        "key": "xs",
+        "value": "35%3AO10LLpUAAtIkvQ%3A2%3A1740688240%3A-1%3A5903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     },
     {
         "key": "fbl_st",
-        "value": "101332019%3BT%3A29011090",
+        "value": "101533213%3BT%3A29011470",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B789x384x2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2753%3Btimestamp%3A1740665455",
+        "value": "v2%3Bclient_version%3A2754%3Btimestamp%3A1740688247",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-02-27T14:11:03.143Z",
-        "lastAccessed": "2025-02-27T14:11:03.143Z"
+        "creation": "2025-02-27T20:31:20.827Z",
+        "lastAccessed": "2025-02-27T20:31:20.827Z"
     }
 ]
